--- a/exercises/machine-learning/neural-networks/deep_neural_networks.ipynb
+++ b/exercises/machine-learning/neural-networks/deep_neural_networks.ipynb
@@ -1,47 +1,364 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "korean-wednesday",
-   "metadata": {},
-   "source": [
-    "# Deep Neural Networks\n",
-    "You should build an end-to-end machine learning pipeline using a deep learning model. In particular, you should do the following:\n",
-    "- Load the `fashion mnist` dataset from [TensorFlow](https://www.tensorflow.org/tutorials/keras/classification). The loaded dataset is already split into training and test sets. \n",
-    "- Build an end-to-end machine learning pipeline, including a [deep learning](https://www.tensorflow.org/tutorials/keras/classification) model.\n",
-    "- Optimize your pipeline by validating your design decisions. \n",
-    "- Test the best pipeline on the test set and report various [evaluation metrics](https://scikit-learn.org/0.15/modules/model_evaluation.html).  \n",
-    "- Check the documentation to identify the most important hyperparameters, attributes, and methods of the model. Use them in practice."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "korean-wednesday",
+      "metadata": {
+        "id": "korean-wednesday"
+      },
+      "source": [
+        "# Deep Neural Networks\n",
+        "You should build an end-to-end machine learning pipeline using a deep learning model. In particular, you should do the following:\n",
+        "- Load the `fashion mnist` dataset from [TensorFlow](https://www.tensorflow.org/tutorials/keras/classification). The loaded dataset is already split into training and test sets.\n",
+        "- Build an end-to-end machine learning pipeline, including a [deep learning](https://www.tensorflow.org/tutorials/keras/classification) model.\n",
+        "- Optimize your pipeline by validating your design decisions.\n",
+        "- Test the best pipeline on the test set and report various [evaluation metrics](https://scikit-learn.org/0.15/modules/model_evaluation.html).  \n",
+        "- Check the documentation to identify the most important hyperparameters, attributes, and methods of the model. Use them in practice."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TensorFlow and tf.keras\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "# Helper libraries\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "print(tf.__version__)"
+      ],
+      "metadata": {
+        "id": "X6_dEWtMKoLF",
+        "outputId": "4239bfd0-d726-40a1-e3f9-176e620822dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "X6_dEWtMKoLF",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.18.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fashion_mnist = tf.keras.datasets.fashion_mnist\n",
+        "\n",
+        "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
+      ],
+      "metadata": {
+        "id": "8AggGtq0Kxes",
+        "outputId": "635c0bbc-efce-4698-8c1a-dc57ef031af7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "8AggGtq0Kxes",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Normalize images\n",
+        "train_images = train_images / 255.0\n",
+        "test_images = test_images / 255.0\n",
+        "\n",
+        "# Expand image shape to (28, 28, 1) for the Conv2D layer\n",
+        "train_images = train_images[..., tf.newaxis]\n",
+        "test_images = test_images[..., tf.newaxis]"
+      ],
+      "metadata": {
+        "id": "WwEqOBklLQT5"
+      },
+      "id": "WwEqOBklLQT5",
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# One-hot encode labels (optional for categorical_crossentropy)\n",
+        "from tensorflow.keras.utils import to_categorical"
+      ],
+      "metadata": {
+        "id": "LySbN-NfMaqe"
+      },
+      "id": "LySbN-NfMaqe",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_lable_cat = to_categorical(train_labels, 10)\n",
+        "test_lable_cat = to_categorical(test_labels, 10)"
+      ],
+      "metadata": {
+        "id": "8guIgvwzMm5O"
+      },
+      "id": "8guIgvwzMm5O",
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout"
+      ],
+      "metadata": {
+        "id": "_228M_M7NdrX"
+      },
+      "id": "_228M_M7NdrX",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_model():\n",
+        "    model = Sequential([\n",
+        "        Conv2D(32, (3,3), activation='relu', input_shape=(28,28,1)),\n",
+        "        MaxPooling2D((2,2)),\n",
+        "        Dropout(0.25),\n",
+        "        Conv2D(64, (3,3), activation='relu'),\n",
+        "        MaxPooling2D((2,2)),\n",
+        "        Dropout(0.25),\n",
+        "        Flatten(),\n",
+        "        Dense(128, activation='relu'),\n",
+        "        Dropout(0.5),\n",
+        "        Dense(10, activation='softmax')\n",
+        "    ])\n",
+        "    return model"
+      ],
+      "metadata": {
+        "id": "UFBscrbiOcEg"
+      },
+      "id": "UFBscrbiOcEg",
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = create_model()\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "# Use validation set to tune and monitor overfitting\n",
+        "history = model.fit(train_images, train_lable_cat, epochs=10, batch_size=64,\n",
+        "                    validation_split=0.2)"
+      ],
+      "metadata": {
+        "id": "7wpyd7CDOKD9",
+        "outputId": "d8e9e8c9-8f50-423a-a92a-57b26e0a0813",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "7wpyd7CDOKD9",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 34ms/step - accuracy: 0.2818 - loss: 1.9033 - val_accuracy: 0.6987 - val_loss: 0.8141\n",
+            "Epoch 2/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 34ms/step - accuracy: 0.6539 - loss: 0.9156 - val_accuracy: 0.7345 - val_loss: 0.7116\n",
+            "Epoch 3/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 34ms/step - accuracy: 0.6857 - loss: 0.8462 - val_accuracy: 0.7472 - val_loss: 0.6724\n",
+            "Epoch 4/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 33ms/step - accuracy: 0.6985 - loss: 0.7968 - val_accuracy: 0.7518 - val_loss: 0.6558\n",
+            "Epoch 5/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 33ms/step - accuracy: 0.7096 - loss: 0.7734 - val_accuracy: 0.7617 - val_loss: 0.6209\n",
+            "Epoch 6/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 33ms/step - accuracy: 0.7136 - loss: 0.7464 - val_accuracy: 0.7651 - val_loss: 0.6270\n",
+            "Epoch 7/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 33ms/step - accuracy: 0.7253 - loss: 0.7198 - val_accuracy: 0.7720 - val_loss: 0.5943\n",
+            "Epoch 8/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 33ms/step - accuracy: 0.7294 - loss: 0.7110 - val_accuracy: 0.7641 - val_loss: 0.5909\n",
+            "Epoch 9/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 34ms/step - accuracy: 0.7370 - loss: 0.6948 - val_accuracy: 0.7734 - val_loss: 0.5734\n",
+            "Epoch 10/10\n",
+            "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 38ms/step - accuracy: 0.7365 - loss: 0.6934 - val_accuracy: 0.7742 - val_loss: 0.5807\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Shape of test_images:\", test_images.shape)\n",
+        "print(\"Shape of test_lable_cat:\", test_lable_cat.shape)"
+      ],
+      "metadata": {
+        "id": "C5GvAsjzSQKW",
+        "outputId": "3c8648b1-a544-4e02-ba2a-1a4a753c122c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "C5GvAsjzSQKW",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of test_images: (10000, 28, 28, 1)\n",
+            "Shape of test_lable_cat: (60000, 10)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate on test set\n",
+        "test_loss, test_acc = model.evaluate(test_images, test_lable_cat)\n",
+        "print(\"Test accuracy:\", test_acc)\n",
+        "print(\"Test loss:\", test_loss)"
+      ],
+      "metadata": {
+        "id": "kAv1KyxXOeio",
+        "outputId": "05aa6512-604b-4917-e125-9ddf22d4c1a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        }
+      },
+      "id": "kAv1KyxXOeio",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "Data cardinality is ambiguous. Make sure all arrays contain the same number of samples.'x' sizes: 10000\n'y' sizes: 60000\n",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-ad2679b2beec>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Evaluate on test set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_lable_cat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test accuracy:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test loss:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    120\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m             \u001b[0;31m# `keras.config.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/trainers/data_adapters/data_adapter_utils.py\u001b[0m in \u001b[0;36mcheck_data_cardinality\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    113\u001b[0m             )\n\u001b[1;32m    114\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34mf\"'{label}' sizes: {sizes}\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Data cardinality is ambiguous. Make sure all arrays contain the same number of samples.'x' sizes: 10000\n'y' sizes: 60000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = model.evaluate(test_images, test_lable_cat)\n",
+        "print(\"Test accuracy:\", test_acc)\n",
+        "print(\"Test loss:\", test_loss)"
+      ],
+      "metadata": {
+        "id": "9fFv93_dRh3v"
+      },
+      "id": "9fFv93_dRh3v",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Predict classes for detailed metrics\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import classification_report, confusion_matrix"
+      ],
+      "metadata": {
+        "id": "wVchB5-iP9yJ"
+      },
+      "id": "wVchB5-iP9yJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = model.predict(test_images)\n",
+        "y_pred_classes = np.argmax(y_pred, axis=1)\n",
+        "\n",
+        "print(classification_report(test_labels, y_pred_classes))\n",
+        "print(\"Confusion matrix:\\n\", confusion_matrix(test_labels, y_pred_classes))"
+      ],
+      "metadata": {
+        "id": "axKXI9deQBA3"
+      },
+      "id": "axKXI9deQBA3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "MraN6zEDP6X-"
+      },
+      "id": "MraN6zEDP6X-",
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.5"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "infrared-copper",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
